tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__GTMVTankAlready-AAAAAAAAAAAAAAAAAAADfA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 892,
  "prerequisites": [
    891,
    77
  ],
  "properties": {
    "auto_claim": false,
    "desc": "These store 128,000L. The dark steel plates and LV pump make it a little annoying to make, since it needs an EBF.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lGT MV Tank...Already?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    891,
    77
  ],
  "rewards": [],
  "tasks": []
}
