tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__GTTankstheLVVers-AAAAAAAAAAAAAAAAAAADew==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 891,
  "prerequisites": [
    93
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The next version of GT tanks stores 64,000L in a tank. It actually requires a pump this time, so it's a little expensive. Consider staying with your ULV ones if you only need basic I/O.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lGT Tanks, the LV Version",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    93
  ],
  "rewards": [],
  "tasks": []
}
