tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier1LV-AAAAAAAAAAAAAAAAAAAAAw==__GalliumArsenideC-AAAAAAAAAAAAAAAAAAADRA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 836,
  "prerequisites": [
    77,
    542
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The diode requires gallium arsenide, and you may be wondering how to get gallium or arsenic this early in the game.\n\nSphalerite and zinc are the primary sources of gallium at this tier.\n\nYou can find sphalerite in sulfur veins at Y 5-20, and the small zinc ores in the Overworld or the Nether at Y 80-210. You won't find much on the Overworld because of obvious reasons. To get additional zinc crushed ore drops, use a Tinker's Construct tool with the Luck (Fortune) enchant on it, probably the best use for all that lapis you got while looking for calcite. Or use a miner, if you don't mind how slow it is.\n\n- Sphalerite can be electrolyzed for a small chance of a gallium dust. Better put in a lot or you might get unlucky.\n- Zinc crushed ore can be washed and then thermal centrifuged or forge hammered and then centrifuged. But you don't always get the crushed ore as a drop, the impure dust doesn't give gallium.\n\nYou can get arsenic from realgar small ores in the Nether at Y 15-85. Centrifuge the dusts in a centrifuge.\n\nOther sources are Tinker's Construct cobalt ore in the nether and cobaltite ore in the Twilight Forest. You can use your EBF for that. You also need to level up your pickaxe to ardite or make an Ironwood Pickaxe or LV Miner to harvest cobalt ore.\n\nAnother way to get gallium and arsenic is with XP buckets in a crafting grid if you're really desperate.\n\nWith your EBF you can combine these two dusts to make a Gallium Arsenide Crystal.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lGallium Arsenide Crystal",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    77,
    542
  ],
  "rewards": [],
  "tasks": []
}
